src/test/deca/syntax/valid/07print_bonjour.deca
{
    int x = 5;
    println(-(5*7+83*8) );
}