src/test/deca/syntax/invalid/Objets/13IdentifiantNonDeclare.deca
class Invalid {
    
    int invalidFct() {
        int a = 1;
        int b = 5;

        test = a + b;
        return test;
    }

}